--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1 class="title">About Us</h1>
         <div class="row">
           <div class="col about-desc">
-            <p>MORRIS here, you will find delicious, creative cakes made specially for you and your loved ones. We can customise your cake for birthday, wedding, anniversary, graduation etc. Tell us what inspires you!</p>
+            <p>MORRIS is here, you will find delicious, creative cakes made specially for you and your loved ones. We can customise your cake for birthday, wedding, anniversary, graduation etc. Tell us what inspires you!</p>
           </div>
         </div>
         <div class="row text-center">
@@ -72,7 +72,7 @@
           </div>
           <div class="col-md-4 about">
             <img src="assets/cake3.jpg" class="about-img" />
-            <h4>Anniversery Cake</h4>
+            <h4>Anniversary Cake</h4>
           </div>
         </div>
       </div>
